--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -15,7 +15,7 @@
     display: block;
     width: 100%;
     height: 2px;
-    bottom: 0;
+    top: 25px;
     left: 0;
     background-color: #FFF;
     transform: scaleX(0);
