--- a/src/global.css
+++ b/src/global.css
@@ -32,3 +32,34 @@ body{
   background: #555; 
 }
 
+
+
+/* projects page view deisgns button */
+.view-design {
+  position: relative;
+  color: #FFF;
+  text-decoration: none;
+}
+
+.view-design:hover {
+  color: #FFF;
+}
+
+
+.view-design::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  top: 35px;
+  left: 0;
+  background-color: #FFF;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+
+.view-design:hover::before {
+  transform: scaleX(1);
+}
